--- a/local/templates/main/css/layout.css
+++ b/local/templates/main/css/layout.css
@@ -185,6 +185,10 @@ p{
 a:focus{
 	outline: none;
 }
+.invisible-checkbox{
+	visibility: hidden;
+	height: 0;
+}
 .b-btn,
 .btn{
 	vertical-align: middle;
