--- a/local/templates/main/css/layout.css
+++ b/local/templates/main/css/layout.css
@@ -480,7 +480,14 @@ textarea:-moz-placeholder {
 
 			}
 /***************/
-
+.order-adress-map-form-content{
+	padding-top: 16px;
+}
+.b-addresss-item-container{
+	border: 1px solid #f6f1ea;
+	margin-top: -1px;
+	padding: 8px 16px;
+}
 .b-popup{
 	border-radius: 6px;
     padding: 24px 24px 34px;
@@ -565,6 +572,18 @@ textarea:-moz-placeholder {
     height: 18px;
     left: 10px;
     top: 13px;
+}
+ul.ui-autocomplete{
+	box-shadow: 0px 15px 30px rgba(0,0,0,0.1);
+    border-radius: 6px;
+    padding: 16px 0px;
+    position: absolute;
+    z-index: 100;
+    background: #FFF;
+    top: 46px;
+}
+.b-text ul.ui-autocomplete li:before{
+	display: none !important;
 }
 .mobile-menu{
 	display: none;
@@ -4283,17 +4302,18 @@ li.bx-inclinkspersonal-item {
 		.b-addresss-item__address{
 			display: inline-block;
 			width: 100%;
-			max-width: 495px;
+			max-width: 435px;
 		}
 		.b-addresss-item__room{
 			display: inline-block;
 			width: 100%;
-			max-width: 160px;
+			max-width: 166px;
 		}
 		.b-addresss-item__index{
 			display: inline-block;
 			width: 100%;
-			max-width: 100px;
+			max-width: 166px;
+			margin-right: 0;
 		}
 	.b-addresss-btn-container{
 		width: 150px;
@@ -4323,9 +4343,13 @@ li.bx-inclinkspersonal-item {
 			margin-top: 20px;
 			display: inline-block;
 		}
+.basket-checkout-block-total-description{
+	    /*color: #2f3435;*/
+    /*font: 400 20px/24px "Helvetica Neue",Helvetica,Arial,sans-serif;*/
+}
 #map-address{
 	height: 500px;
-	margin-top: 20px;
+	margin-top: 32px;
 }
 	.ui-menu-item{
 		cursor: pointer;
