--- a/local/templates/main/css/layout-mobile.css
+++ b/local/templates/main/css/layout-mobile.css
@@ -320,8 +320,12 @@ p{
 	.b-big-menu-column:nth-child(2):before{
 		display: none;
 	}
-.b-category-left{
+.b-category-left-catalog{
 	display: none;
+}
+.b-category-left-personal{
+	width: 100%;
+	margin-bottom: 40px;
 }
 	.b-category-right{
 		width: 100%;
@@ -539,6 +543,14 @@ p{
 		margin-top: 0;
 		/*display: block;*/
 	}
+	.b-detail-btn-container{
+		margin-top: 10px;
+	}
+		.b-detail-btn-container p{
+			float: unset;
+			display: block;
+			margin-top: 10px;
+		}
 	.b-detail-count .b-basket-count{
 		display: inline-block;
 	}
@@ -631,6 +643,20 @@ p{
 		max-width: 100%;
 		width: 100%;
 		display: block;
+	}
+	.b-input{
+	    width: 100%;
+	    margin-right: 0;
+	}
+	div.bx-yellow .btn.btn-default{
+		margin-left: 0;
+		max-width: 250px;
+	}
+	.basket-checkout-block-btn{
+		text-align: center;
+	}
+	.b-input.b-wide-input{
+		width: 100%;
 	}
 }
 
