--- a/local/templates/main/css/layout.css
+++ b/local/templates/main/css/layout.css
@@ -3965,7 +3965,9 @@ li.bx-inclinkspersonal-item {
 	border: 1px solid #f43d84;
 	/*box-shadow: 0px 0px 0px 2px #F00;*/
 }
-
+.b-input-comment{
+	
+}
 .b-checkbox input{
 	position: absolute;
 	opacity: 0;
@@ -3983,7 +3985,7 @@ li.bx-inclinkspersonal-item {
 	font-family: 'ProximaNova-Regular';
 	font-size: 16px;
 	line-height: 22px;
-	margin-bottom: 17px;
+	/*margin-bottom: 17px;*/
 }
 .b-checkbox input:disabled:not(.any-flowers) + span + label,
 .b-checkbox input:disabled:not(.any-flowers) + label{
