--- a/local/templates/main/css/layout.css
+++ b/local/templates/main/css/layout.css
@@ -3868,11 +3868,14 @@ li.bx-inclinkspersonal-item {
 			.b-data-order .b-btn-dashed{
 				border-bottom: 1px dashed #434343;
 			}
-
+#no_price_to_pocikpoint{
+	max-width: calc(50% - 12px);
+	display: block;
+}
 	.b-textarea{
 		width: calc(50% - 12px);
 		margin-right: 0;
-		margin-bottom: 20px;
+		/*margin-bottom: 20px;*/
 	}
 		.b-textarea textarea{
 			padding: 14px 22px 15px 22px;
