--- a/local/templates/main/css/layout-tablet.css
+++ b/local/templates/main/css/layout-tablet.css
@@ -28,12 +28,22 @@ body {
 	}
 	.b-order-addr{
 		margin: 0;
+		margin-bottom: 20px;
 	}
 	.b-delivery-price{
 		margin-top: 18px;
-		margin-bottom: 32px;
+		margin-bottom: 18px;
 	}
 	.b-order-addr-new .b-addresss-item__room{
 		margin-right: 32px;
+	}
+	.b-textarea{
+	    margin-bottom: 16px;
+	}
+	.b-for-payment{
+		margin-bottom: 16px;
+	}
+	.b-last-input-row .b-input{
+		margin-bottom: 20px;
 	}
 }
