--- a/local/templates/main/css/layout.css
+++ b/local/templates/main/css/layout.css
@@ -3797,6 +3797,12 @@ li.bx-inclinkspersonal-item {
 		.b-input:nth-child(4n){
 			margin-right: 0;
 		}
+		.b-order-addr-input-cont .b-input:nth-child(4n){
+			margin-right: 24px;
+		}
+		.b-order-addr-input-cont .b-input:nth-child(5n){
+			margin-right: 0;
+		}
 		.b-input.full{
 			width: 100%;
 		}
