--- a/local/templates/main/css/layout.css
+++ b/local/templates/main/css/layout.css
@@ -4693,7 +4693,13 @@ h4.b-delivery-price{
 				background: #C8AD89;
 				color: #fff;
 			}
-
+p.b-order-submit-message{
+	text-align: center;
+    max-width: 159px;
+    margin-left: 8px;
+    margin-top: 12px;
+    color: #00a224;
+}
 
 
 
