--- a/local/templates/main/css/layout.css
+++ b/local/templates/main/css/layout.css
@@ -4251,7 +4251,7 @@ li.bx-inclinkspersonal-item {
 h4.b-delivery-price{
 	font-family: "ProximaNova-Bold";
 	margin-top: 24px;
-	margin-bottom: 16px;
+	margin-bottom: 0px;
 }
 
 .b-order-left{
@@ -4797,11 +4797,17 @@ p.b-order-submit-message{
 	}
 	.b-delivery-input-row{
 	    border-top: 1px solid #e5ded3;
-	    padding: 24px 0px 10px;
+	    padding: 24px 0px 26px;
 	    margin-top: 32px;
 	    border-bottom: 1px solid #e5ded3;
 	}
-
+	.b-srok-delivery span{
+		font-family: "Geometria-Bold";
+	}
+	#SDEK_map{
+		width: 100%;
+		height: 500px;
+	}
 
 
 
