--- a/local/templates/main/css/layout.css
+++ b/local/templates/main/css/layout.css
@@ -3590,7 +3590,7 @@ li.bx-inclinkspersonal-item {
 				border-radius: 30px;
 				font-size: 18px;
 				line-height: 26px;
-				font-family: 'Geometria-Medium';
+				font-family: 'ProximaNova-Bold';
 			}
 				.b-addressee-left.active{
 					color: #FFF;
@@ -3604,7 +3604,7 @@ li.bx-inclinkspersonal-item {
 				border-radius: 30px;
 				font-size: 18px;
 				line-height: 26px;
-				font-family: 'Geometria-Medium';
+				font-family: 'ProximaNova-Bold';
 			}
 				.b-addressee-right.active{
 					color: #FFF;
@@ -3985,7 +3985,7 @@ li.bx-inclinkspersonal-item {
 		.b-payment-method p{
 			display: inline-block;
 			margin-right: 30px;
-			font-family: "Geometria-Medium";
+			font-family: "ProximaNova-Bold";
 			vertical-align: top;
 		}
 			.b-payment-method-list{
@@ -4018,7 +4018,7 @@ li.bx-inclinkspersonal-item {
 		background: #ffffff;
 		font-size: 16px;
 		line-height: 20px;
-		font-family: 'Geometria-Regular';
+		font-family: 'ProximaNova-Regular';
 	}		
 		.b-date-time .b-input{
 			width: 100%;
@@ -4066,7 +4066,7 @@ li.bx-inclinkspersonal-item {
 
 		.delivery-price-value,
 		.total-price-value{
-			font-family: 'Geometria-Bold';
+			font-family: 'ProximaNova-Bold';
 			font-size: 24px;
 			line-height: 22px;
 			margin-left: 16px;
@@ -4289,7 +4289,7 @@ h4.b-delivery-price{
 		/*min-width: 250px;*/
 		margin-top: 28px;
 		padding: 13px 34px 14px;
-		font-family: 'Geometria-Medium';
+		font-family: 'ProximaNova-Bold';
 		font-size: 18px;
 		line-height: 26px;
 	}
@@ -4809,13 +4809,19 @@ p.b-order-submit-message{
 	    border-bottom: 1px solid #e5ded3;
 	}
 	.b-srok-delivery span{
-		font-family: "Geometria-Bold";
+		font-family: "ProximaNova-Bold";
 	}
 	#SDEK_map{
 		width: 100%;
 		height: 500px;
 	}
-
+	#b-delivery-price #no_price_to_pocikpoint{
+		font-size: 16px;
+		font-family: "ProximaNova-Regular";
+		display: inline-block;
+		vertical-align: top;
+		line-height: 24px;
+	}
 
 
 
