--- a/local/templates/main/css/layout.css
+++ b/local/templates/main/css/layout.css
@@ -117,6 +117,10 @@ label.error{
 	-webkit-appearance: none;
 	border: 1px solid #F00;
 }
+input.error + label{
+	color: #F00;
+}
+
 input[type="text"],
 input[type="password"],
 input[type="email"],
@@ -1777,7 +1781,7 @@ ul.accordion-list{
 				line-height: 24px;
 				font-size: 16px;
 				text-align: left;
-				color: #00a224;
+				color: #f13d3d;
 				margin-bottom: 20px;
 			}
 			.b-catalog-item .b-catalog-item-empty-text{
@@ -2117,7 +2121,7 @@ ul.accordion-list{
 			}
 			.b-adv-text{
 				margin-left: 13px;
-				width: calc(100% - 48px);
+				max-width: calc(100% - 48px);
 				vertical-align: middle;
 				display: inline-block;
 				font-family: MuseoSansCyrl-500;
@@ -4822,7 +4826,25 @@ p.b-order-submit-message{
 		vertical-align: top;
 		line-height: 24px;
 	}
-
+.b-basket-count-cont.loading{
+	position: relative;
+}
+.b-basket-count-cont.loading:after{
+	position: absolute;
+	content: "s";
+	font-size: 0px;
+	width: 100%;
+	height: 100%;
+	left: 0px;
+	top: 0px;
+	z-index: 10000;
+}
+	.b-basket-count-cont.loading span{
+		color:#B9B9B9
+	}
+	.b-basket-count-cont.loading .b-btn {
+	    box-shadow: inset 0px 0px 0px 1px #B9B9B9;
+	}
 
 
 
