--- a/local/templates/main/css/layout.css
+++ b/local/templates/main/css/layout.css
@@ -4588,6 +4588,10 @@ h4.b-delivery-price{
 		    font-family: 'ProximaNova-Regular';
 		    width: 100%;
 		}
+		.b-btn-address-save:hover{
+			background: #3eb104;
+			color: #fff;
+		}
 		.b-btn-address-back{
 			margin-top: 20px;
 			display: inline-block;
